Testing Page Added
Also, deleted duplicate index.html page

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         </div>
     
         <div id="footer">
-          <span>FOOTER</span>
+          <a href="Testing/testing.html">FOOTER</a>
         </div>
     </div>
 
