Recreated Home Page and Added Game Page

--- a/public/game-screen.html
+++ b/public/game-screen.html
@@ -11,18 +11,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
   <div class="topNav">
     <div class="topNav-Content">
-      <div class="topNav-Logo">
+      <div class="topNav-Logo" onclick="window.location.href = 'index.html'">
         <h1>Phaser</h1>
         <p>PLAYGROUND</p>
       </div>
     </div>
 
     <div class="topNav-Links">
-      <a href="#" class="currentPage">Home</a>
+      <a href="#" class="currentPage">Game Title</a>
       <a href="#">New</a>
       <a href="#">Puzzle</a>
       <a href="#">Action</a>
@@ -35,21 +36,15 @@
       <a href="#">Create Account</a>
       <a href="#"><input type="button" class="signIn-Button" value="Sign In"/></a>
     </div>
-
   </div>
 
-  <div class="bodyContainer">
-    <div class="angry-grid">
-        <div id="item-0" onclick="window.location.href = 'game-screen.html'"></div>
-        <div id="item-1" onclick="window.location.href = 'game-screen.html'"></div>
-        <div id="item-2" onclick="window.location.href = 'game-screen.html'"></div>
-        <div id="item-3" onclick="window.location.href = 'game-screen.html'"></div>
-        <div id="item-4" onclick="window.location.href = 'game-screen.html'"></div>
-        <div id="item-5" onclick="window.location.href = 'game-screen.html'"></div>
-        <div id="item-6" onclick="window.location.href = 'game-screen.html'"></div>
-        <div id="item-7" onclick="window.location.href = 'game-screen.html'"></div>
-        <div id="item-8" onclick="window.location.href = 'game-screen.html'"></div>
-      </div>
+  <div class="gameBodyContainer">
+    <div class="gameInfo">
+      <h1>Game Title</h1>
+    </div>
+    <div class="gameContainer">
+      
+    </div>
   </div>
 
   <footer class="footer">
@@ -59,6 +54,5 @@
         <p>PLAYGROUND</p>
       </div>
   </footer>
-    
+
 </body>
-</html>
