--- a/public/game-screen.html
+++ b/public/game-screen.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
     <script src="main.js"></script>
+    <title>Game Title</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="grid.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
