--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
     <script src="main.js"></script>
     <title>Phaser Playground</title>
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="grid.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
@@ -41,7 +42,7 @@
 
   <div class="bodyContainer">
     <div class="angry-grid">
-        <div id="item-0" onclick="window.location.href = 'game-screen.html'"></div>
+        <div id="item-0" onclick="window.location.href = 'SpaceAliens.html'"></div>
         <div id="item-1" onclick="window.location.href = 'game-screen.html'"></div>
         <div id="item-2" onclick="window.location.href = 'game-screen.html'"></div>
         <div id="item-3" onclick="window.location.href = 'game-screen.html'"></div>
